--- a/AutoValidate/TestPage.html
+++ b/AutoValidate/TestPage.html
@@ -12,9 +12,19 @@
     <div style="width: 100%; height: 800px;">
 
         <input type="text" placeholder="first name" name="first name" data-av="" /><br />
-        <input type="text" placeholder="last name" name="last name" data-av="" data-av-message="my custom message" /><br />
+        <input type="text" name="last name" data-av="" data-av-message="Please enter your last name" /><br />
 
-        <input type="button" id="btnSubmit" value="Submit" data-av="" />
+        <select name="Icecream Flavours" data-av="" >
+            <option>---</option>
+            <option value="double chocolate">Double Chocolate</option>
+            <option value="vanilla">Vanilla</option>
+            <option value="strawberry">Strawberry</option>
+            <option value="caramel">Caramel</option>
+        </select><br />
+
+        <input type="button" id="btnSubmit" value="Submit" data-av="" /><br />
+
+        <input type="button" value="Get Dropdown value" />
     </div>
 
 
