--- a/AutoValidate/TestPage.html
+++ b/AutoValidate/TestPage.html
@@ -3,28 +3,46 @@
 <head>
     <title>AutoValidate</title>
 	<meta charset="utf-8" />
+    <style>
+        input[type=text], select {margin: 5px 15px 5px;  display:block; width:150px; }
+
+        input[type=button] { margin: 5px 15px 5px; }
+    </style>
     <link href="Content/autoValidate-modal.css" rel="stylesheet" />
     <script src="Scripts/autoValidate-modal.js"></script>
     <script src="Scripts/autoValidate.js"></script>
 </head>
 <body>
 
-    <div style="width: 100%; height: 800px;">
+    <div style="width: 100%; height: 800px; margin-top:2%;">
 
-        <input type="text" placeholder="first name" name="first name" data-av="" /><br />
-        <input type="text" name="last name" data-av="" data-av-message="Please enter your last name" /><br />
+        <input type="text"  placeholder="first name" name="first name" data-av="" /> 
+        <input type="text" name="last name" data-av="" data-av-message="Please enter your last name" />
 
-        <select name="Icecream Flavours" data-av="" >
+        <select name="Icecream Flavours" data-av=""  >
             <option>---</option>
             <option value="double chocolate">Double Chocolate</option>
             <option value="vanilla">Vanilla</option>
             <option value="strawberry">Strawberry</option>
             <option value="caramel">Caramel</option>
-        </select><br />
+        </select>
+
+       <div style="margin:5px 15px 5px; display:block; ">
+           <input type="radio" name="gender" value="male" data-av="" > Male<br>
+           <input type="radio" name="gender" value="female" data-av=""> Female<br>
+           <input type="radio" name="gender" value="other" data-av=""> Other
+       </div>
+
+        <div style="margin:5px 15px 5px; display:block; width:150px">
+            <input type="radio" name="age" value="18-30" data-av="" data-av-message="Please select your age"> 18-30<br>
+            <input type="radio" name="age" value="31-50" data-av=""> 31-50<br>
+            <input type="radio" name="age" value="51+" data-av=""> 51+
+        </div>
+
 
         <input type="button" id="btnSubmit" value="Submit" data-av="" /><br />
 
-        <input type="button" value="Get Dropdown value" />
+  
     </div>
 
 
