--- a/AutoValidate/TestPage.html
+++ b/AutoValidate/TestPage.html
@@ -27,7 +27,7 @@
             <option value="caramel">Caramel</option>
         </select>
 
-       <div style="margin:5px 15px 5px; display:block; ">
+       <div style="margin:5px 15px 5px; display:block; width:150px ">
            <input type="radio" name="gender" value="male" data-av="" > Male<br>
            <input type="radio" name="gender" value="female" data-av=""> Female<br>
            <input type="radio" name="gender" value="other" data-av=""> Other
