--- a/AutoValidate/TestPage.html
+++ b/AutoValidate/TestPage.html
@@ -16,10 +16,13 @@
 
     <div style="width: 100%; height: 800px; margin-top:2%;">
 
-        <input type="text"  placeholder="first name" name="first name" data-av="" /> 
+        <input type="text"  placeholder="first name" name="first name" data-av=""/> 
         <input type="text" name="last name" data-av="" data-av-message="Please enter your last name" />
+        <input type="text" placeholder="age" name="age" data-av="number" /> 
+        <input type="text" placeholder="email address" name="email address" data-av="email" /> 
+       
 
-        <select name="Icecream Flavours" data-av=""  >
+        <select name="Icecream Flavours" data-av="" data-av-ignore="0" >
             <option>---</option>
             <option value="double chocolate">Double Chocolate</option>
             <option value="vanilla">Vanilla</option>
@@ -41,8 +44,7 @@
 
 
         <input type="button" id="btnSubmit" value="Submit" data-av="" /><br />
-
-  
+ 
     </div>
 
 
